add tests for JWT
