# internal/docs/swagger.json
@@ -4,7 +4,7 @@
         "description": "A simple HTTP Request \u0026 HTTPResponse Service, shamelessly stolen from httpbin.org.",
         "title": "httPod",
         "contact": {},
-        "version": "0.0.1"
+        "version": "0.0.4"
     },
     "paths": {
         "/cookies": {
@@ -159,14 +159,22 @@
                 "tags": [
                     "JWT"
                 ],
-                "summary": "Get jwt of the request.",
+                "summary": "Get jwt passed as authorization bearer token of the request.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "if set, the jwt is verified with the key received from jwks endpoint",
+                        "name": "jwksUri",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/cookies.GetCookies"
+                                "$ref": "#/definitions/jwt.Response"
                             }
                         }
                     }
@@ -640,6 +648,25 @@
                 },
                 "url": {
                     "type": "string"
+                }
+            }
+        },
+        "jwt.Response": {
+            "type": "object",
+            "properties": {
+                "header": {
+                    "type": "object",
+                    "additionalProperties": true
+                },
+                "payload": {
+                    "type": "object",
+                    "additionalProperties": true
+                },
+                "raw": {
+                    "type": "string"
+                },
+                "valid": {
+                    "type": "boolean"
                 }
             }
         }
